<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.MyPage_original">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="725dp"
        android:background="#FFFFFF"
        android:text="@string/back"
        android:textColor="#f7540d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <TextView
        android:id="@+id/myPageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="684dp"
        android:text="@string/myPage"
        android:textColor="#f7540d"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"></TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="537dp"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPageText" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="497dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"></TextView>

    <Button
        android:id="@+id/nameBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/profile_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:background="@drawable/orange"
        android:text="@string/newPeople"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"></Button>

    <TextView
        android:id="@+id/profile_residence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/san_francisco_ca"
        android:textColor="#000000"
        android:textSize="5pt"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"></TextView>

    <TextView
        android:id="@+id/profile_introOneLine"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/hi_my_name_is_john_i_m_a_creative_geek_from_san_francisco_ca_contact_me_at_john_mail_com"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="5pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_residence" />

    <TextView
        android:id="@+id/profile_top3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="233dp"
        android:text="@string/top_3"
        android:textColor="#f7540d"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_introOneLine"></TextView>

    <Button
        android:id="@+id/top3Btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/profile_top3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_introOneLine"
        android:background="@drawable/orange"
        android:text="@string/newPeople"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="180dp"></Button>

    <TextView
        android:id="@+id/profile_favorite_movie1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectanglebox"
        android:padding="11dp"
        android:text="@string/raraland"
        android:textColor="#000000"
        android:textSize="6pt"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/profile_favorite_movie2"
        app:layout_constraintTop_toBottomOf="@+id/profile_top3"></TextView>

    <TextView
        android:id="@+id/profile_favorite_movie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectanglebox"
        android:padding="11dp"
        android:text="@string/in"
        android:textColor="#000000"
        android:textSize="6pt"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/profile_favorite_movie1"
        app:layout_constraintRight_toLeftOf="@id/profile_favorite_movie3"
        app:layout_constraintTop_toBottomOf="@+id/profile_top3"></TextView>

    <TextView
        android:id="@+id/profile_favorite_movie3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectanglebox"
        android:padding="11dp"
        android:text="@string/raraland"
        android:textColor="#000000"
        android:textSize="6pt"
        android:gravity="end"
        app:layout_constraintLeft_toRightOf="@id/profile_favorite_movie2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_top3"></TextView>

    <TextView
        android:id="@+id/profile_interest"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="250dp"
        android:text="@string/interest"
        android:textColor="#f7540d"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_favorite_movie1"></TextView>

    <Button
        android:id="@+id/interestBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/profile_interest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_favorite_movie1"
        android:background="@drawable/orange"
        android:text="@string/newPeople"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"></Button>

    <TextView
        android:id="@+id/profile_myInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_interest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="220dp"
        android:text="@string/hobbit"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="21dp"></TextView>

    <TextView
        android:id="@+id/profile_advantages"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="250dp"
        android:text="@string/advan"
        android:textColor="#f7540d"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_myInterest"></TextView>

    <Button
        android:id="@+id/advantageBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/profile_advantages"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_myInterest"
        android:background="@drawable/orange"
        android:text="@string/newPeople"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="280dp"></Button>

    <TextView
        android:id="@+id/profile_myAdvantages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_advantages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="220dp"
        android:text="@string/iden"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_marginTop="21dp"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>